--- a/interface/jade/footer.jade
+++ b/interface/jade/footer.jade
@@ -5,6 +5,8 @@ footer(role='contentinfo')
                 .col-md-3.block-footer
                     a(href='/', title='')
                         img(src=img_url + 'logo-footer.png', alt='')
+                    a(href='http://solarispromo.com', title='', rel="nofollow").solaris-logo
+                        img(src=img_url + 'solaris-logo.png', alt='Solaris Promo Production')
                 .col-md-5.block-footer
                     //-ul.menu-footer
                         li
@@ -32,7 +34,7 @@ footer(role='contentinfo')
         //-
            .top-footer
         .bottom-footer
-            p © ВсеВидео, 2014. Все права защищены
+            p © ВсеВидео, 2014. Все права защищены. Идея, создание и развитие ресурса: <a href="http://solarispromo.com" rel="nofollow">Solaris Promo Production</a>
         //-
            .bottom-footer
         //-
