--- a/interface/jade/page_playlist.jade
+++ b/interface/jade/page_playlist.jade
@@ -16,7 +16,7 @@ html
             include header
             if playlist.total_cnt==0
                 .content(role='main')
-                    section.broun-block
+                    section.broun-block-playlist
                         .bg-noise
                             .container.playlist-empty
                                 h2 Пустой плейлист
