--- a/interface/jade/page_film.jade
+++ b/interface/jade/page_film.jade
@@ -260,5 +260,6 @@ html
                                     mixin film_thumb(el)
             include footer
             - delete(film.similar); delete(film.description); delete(film.trailer);
+            - delete(film.comments);
             script.
                $(document).ready(function () {window.InitApp({page_conf: !{JSON.stringify(film)}}, "Film")})
