--- a/interface/jade/page_playlist.jade
+++ b/interface/jade/page_playlist.jade
@@ -265,6 +265,7 @@ html
                                         //-
             include footer
             - delete film.description; delete playlist.items;
+            - delete film.comments;
         script(src=js_url + 'responsiveCarousel.min.js')
         script.
             $(document).ready(function () {window.InitApp({page_conf: {id: !{playlist.id}, film: !{JSON.stringify(film)}, previous: !{JSON.stringify(playlist.previous || {})}, next: !{JSON.stringify(playlist.next || {})}}}, "Playlist")})
