Escape comments text before storing it in db

--- a/interface/jade/mixins.jade
+++ b/interface/jade/mixins.jade
@@ -217,7 +217,7 @@ mixin comment_thumb(item)
                        .title-item-tape
                     .content-item-tape
                         .short-text-tape
-                            p(data-mi-name="text")=item.text
+                            p(data-mi-name="text")!=item.text
                         //-
                            .short-text-tape
                     //-
